test/good/automatic/extension/mixed/without_input/ret_zero/0009.lat
class C {
	int[] fld;
}

void a() {
  C[] c = new C[1];
  c[0] = new C;
	c[0].fld = new int[3];
}
int main() {
  a();
	return 0;
}
