test/bad/automatic/extension/class/compile_time/0021.lat
class andrzej {
  int andrzej;

  void return() {
    int a = 20;
  }
}

int main() {
  andrzej janusz = new andrzej;
  return janusz.andrzej;
}
